# dev-tools-config

./: README.md
batch/: jar-wrapper.bat
docs/problemas-comunes/: dbeaver-extract-saved-pwd.md  reset-wsl-password.md
mac-os/scripts/backup-app/: check-folders.sh  copy-backup-parallel.sh  copy-backup.sh  delete-folders-fast.sh  delete-folders.sh  status.txt
powershell/java/: configurar-jar-en-path.ps1
python/scripts/bulk-extract/: README.md  bulk-extract.config.yml  bulk-extract.py
python/scripts/graylog/checker/: README.md  graylog_check.config.yml  graylog_checker.py
python/scripts/md_to_pdf/: README.md  default.css  default.html  md_to_pdf.py  requirements.txt  sample-complex-test-lab.md  sample_lab.md  sample_prueba_emoji.md
python/scripts/scan_directory/: README.md  estructura_directorios.txt  pyproject.toml  requirements.txt  salida_backend_promtp.txt  scan_batch.sample.config.yaml  scan_directory.py  scan_ignore_dotnet.yaml  scan_ignore_python.yaml
python/scripts/scan_directory/scan-config/batches/: scan_amazon.config.yaml  scan_batch.config.yaml  scan_batch2.config.yaml
python/scripts/scan_directory/scan-config/ignore-rules/: scan_ignore_amazonshop.yaml  scan_ignore_general.yaml  scan_ignore_k6.yml  scan_ignore_playwright.yaml
python/scripts/svg_flatten_converter/: requirements.txt  svg_flatten.py  svg_flattener.py
python/scripts/webp_to_png_converter/: README.md  requirements.txt  webp_converter_main.py  webp_to_png_converter.py
